[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Terrain.tscn" type="PackedScene" id=3]
[ext_resource path="res://Target/Target.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/RayCast.gd" type="Script" id=5]
[ext_resource path="res://NPC/NPC.tscn" type="PackedScene" id=6]
[ext_resource path="res://NPC/NPC.gd" type="Script" id=7]
[ext_resource path="res://UI/Dialog.gd" type="Script" id=8]
[ext_resource path="res://UI/UI.gd" type="Script" id=9]
[ext_resource path="res://Drone/Drone.tscn" type="PackedScene" id=10]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 5.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=4]
material = SubResource( 3 )
radius = 0.5
height = 1.0

[sub_resource type="SphereShape" id=5]
radius = 30.0

[node name="Game" type="Spatial"]

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 66.1052, 1.20086, -1.61012 )
collision_layer = 2
script = ExtResource( 2 )

[node name="Pivoit" type="Position3D" parent="Player"]

[node name="Camera" type="Camera" parent="Player/Pivoit"]
transform = Transform( -1, -1.51808e-08, 8.60946e-08, 0, 0.984808, 0.173648, -8.74228e-08, 0.173648, -0.984808, 0, 5, -8 )

[node name="RayCast" type="RayCast" parent="Player/Pivoit"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 3, 0 )
enabled = true
cast_to = Vector3( 0, 0, -100 )
script = ExtResource( 5 )

[node name="Reticule" type="Position3D" parent="Player/Pivoit/RayCast"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50 )

[node name="MeshInstance" type="MeshInstance" parent="Player/Pivoit/RayCast/Reticule"]
mesh = SubResource( 4 )

[node name="JumpTimer" type="Timer" parent="Player"]
wait_time = 3.0
one_shot = true

[node name="lowpoly_scene" parent="." instance=ExtResource( 3 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )

[node name="Target_container" type="Spatial" parent="."]
visible = false

[node name="Target" parent="Target_container" instance=ExtResource( 4 )]
transform = Transform( 0.939693, 0, 0.34202, 0, 1, 0, -0.34202, 0, 0.939693, -27, 4, 9 )

[node name="Target2" parent="Target_container" instance=ExtResource( 4 )]
transform = Transform( 0.642788, 0, 0.766044, 0, 1, 0, -0.766044, 0, 0.642788, -45.175, 18.5487, -22.9423 )

[node name="Target3" parent="Target_container" instance=ExtResource( 4 )]
transform = Transform( 0.0697565, 0, 0.997564, 0, 1, 0, -0.997564, 0, 0.0697565, -16.3409, 12.7391, -52.6929 )

[node name="Target4" parent="Target_container" instance=ExtResource( 4 )]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 17.4054, 17.2819, -22.1043 )

[node name="Target5" parent="Target_container" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -6.79209, 10.0154, 31.2695 )

[node name="NPC" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 53.8478, 0.370439, -15.5683 )
script = ExtResource( 7 )

[node name="Area" type="Area" parent="NPC"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="NPC/Area"]
shape = SubResource( 5 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="Damage" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0 )

[node name="Background" type="ColorRect" parent="UI"]
anchor_right = 1.0
margin_bottom = 30.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Score" type="Label" parent="UI"]
margin_left = 10.0
margin_right = 510.0
margin_bottom = 30.0
text = "Score:"
valign = 1

[node name="Time" type="Label" parent="UI"]
margin_left = 512.0
margin_right = 1012.0
margin_bottom = 30.0
text = "Timer: 00:00"
align = 2
valign = 1

[node name="Dialogue" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Background" type="ColorRect" parent="UI/Dialogue"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -30.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Text" type="RichTextLabel" parent="UI/Dialogue"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -23.0
margin_bottom = 7.0
bbcode_enabled = true
bbcode_text = "[center]Hello[/center]"
text = "Hello"

[node name="Timer" type="Timer" parent="UI"]

[node name="Drone_container" type="Spatial" parent="."]

[node name="Drone" parent="Drone_container" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 30, 100 )

[node name="Drone2" parent="Drone_container" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 30, 100 )

[node name="Drone3" parent="Drone_container" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 30, 100 )

[connection signal="timeout" from="Player/JumpTimer" to="Player" method="_on_JumpTimer_timeout"]
[connection signal="body_entered" from="NPC/Area" to="NPC" method="_on_Area_body_entered"]
[connection signal="body_shape_exited" from="NPC/Area" to="NPC" method="_on_Area_body_shape_exited"]
[connection signal="timeout" from="UI/Timer" to="UI" method="_on_Timer_timeout"]
